kotlin-parser/src/test/semlang/validatorTests/fail/variableNames2.sem
function myStuff.myFunction(): Integer {
  let Integer: Integer = Integer."1"
  Integer
}
